# JsonSchema-2-JavaClass

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: python-package-conda.yml  python-publish.yml
src/: enum_generator.py  header_generator.py  java_method_generator.py  java_model.py  method_generator.py
tests/: enum_reference_data.py  reference_data.py  test_enum_generator.py  test_header_generator.py  test_java_method_generator.py  test_method_generator.py
